{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 153,
  "lineage": "cd330e94-40ed-c275-f781-8cb0dbb186a2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer/frontendIPConfigurations/public-ip",
                "name": "public-ip",
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PublicSubnet"
              }
            ],
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer",
            "location": "southeastasia",
            "name": "load-balancer",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "proj_homework",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.public",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer",
            "name": "backend-pool"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.public",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer/backendAddressPools/backend-pool"
            ],
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer/frontendIPConfigurations/public-ip",
            "frontend_ip_configuration_name": "public-ip",
            "frontend_port": 22,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer/loadBalancingRules/ssh-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/loadBalancers/load-balancer",
            "name": "ssh-rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.public",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/natGateways/nat-gateway",
            "idle_timeout_in_minutes": 4,
            "location": "southeastasia",
            "name": "nat-gateway",
            "resource_group_name": "proj_homework",
            "resource_guid": "f3271a61-0972-4a86-8f35-53cddfee58ef",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/networkInterfaces/nic-example",
            "internal_domain_name_suffix": "tpb0r4ffu3penl2hcrbyx1tsuc.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-example",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PrivateSubnet"
              }
            ],
            "location": "southeastasia",
            "name": "nic-example",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "proj_homework"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.private",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/networkSecurityGroups/ssh_nsg",
            "location": "southeastasia",
            "name": "ssh_nsg",
            "resource_group_name": "proj_homework",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_web_sh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_gateway_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/publicIPAddresses/nat-gateway-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.193.165.185",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "nat-gateway-public-ip",
            "resource_group_name": "proj_homework",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/routeTables/PrivateRouteTable",
            "location": "southeastasia",
            "name": "PrivateRouteTable",
            "resource_group_name": "proj_homework",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "NatRoute",
                "next_hop_in_ip_address": "10.0.3.0",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/routeTables/private-subnet-route-table",
            "location": "southeastasia",
            "name": "private-subnet-route-table",
            "resource_group_name": "proj_homework",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "nat-gateway-route",
                "next_hop_in_ip_address": "10.0.2.0",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/routeTables/PublicRouteTable",
            "location": "southeastasia",
            "name": "PublicRouteTable",
            "resource_group_name": "proj_homework",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "InternetRoute",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nat_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/nat-gateway-subnet",
            "name": "nat-gateway-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "proj_homework",
            "virtual_network_name": "proj-vent"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PrivateSubnet",
            "name": "PrivateSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "proj_homework",
            "virtual_network_name": "proj-vent"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PublicSubnet",
            "name": "PublicSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "proj_homework",
            "virtual_network_name": "proj-vent"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PrivateSubnet",
            "network_security_group_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/networkSecurityGroups/ssh_nsg",
            "subnet_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PrivateSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.private",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PrivateSubnet",
            "route_table_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/routeTables/private-subnet-route-table",
            "subnet_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PrivateSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_route_table.private_subnet_route_table",
            "azurerm_subnet.private",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PublicSubnet",
            "route_table_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/routeTables/PublicRouteTable",
            "subnet_id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent/subnets/PublicSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_route_table.public",
            "azurerm_subnet.public",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f8a8c39b-a7a5-465e-af87-14438bee72a2",
            "id": "/subscriptions/0655091b-4b63-4acb-8729-1994fc0835e8/resourceGroups/proj_homework/providers/Microsoft.Network/virtualNetworks/proj-vent",
            "location": "southeastasia",
            "name": "proj-vent",
            "resource_group_name": "proj_homework"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}